--- a/public/index.html
+++ b/public/index.html
@@ -1,80 +1,40 @@
-<script>
-const API = "/.netlify/functions/parse-spec";
+<!doctype html>
+<html lang="en" dir="ltr">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Abracadabra – demo</title>
+  <link rel="stylesheet" href="./style.css" />
+</head>
+<body>
+  <main class="wrap">
+    <h1>Speak your vision <span class="badge">demo</span></h1>
+    <p class="lead">Describe an app in voice/text and get a Spec. Preview is mocked.</p>
 
-const txt = document.querySelector("#nl-text");
-const btnSpec = document.querySelector("#to-spec");
-const btnPreview = document.querySelector("#preview");
-const btnMic = document.querySelector("#mic");
-const btnInvoice = document.querySelector("#preset-invoice");
-const btnTodo = document.querySelector("#preset-todo");
-const btnCrm = document.querySelector("#preset-crm");
-const outSpec = document.querySelector("#spec-output");
-const outPreview = document.querySelector("#preview-output");
-const btnDownload = document.querySelector("#download-json");
+    <section class="card">
+      <h2>Voice or text</h2>
+      <textarea id="prompt" rows="5" placeholder="Describe your app…"></textarea>
+      <div class="row">
+        <button id="toSpec">👉 To Spec</button>
+        <button id="preview" class="secondary">Preview</button>
+      </div>
+      <div class="row">
+        <button id="download" class="secondary">Download JSON</button>
+        <button id="mic" class="secondary">🎙️ Mic</button>
+      </div>
+    </section>
 
-async function callApi(payload) {
-  const r = await fetch(API, {
-    method: "POST",
-    headers: { "content-type": "application/json" },
-    body: JSON.stringify(payload)
-  });
-  if (!r.ok) throw new Error("Server error");
-  return r.json();
-}
+    <section class="card">
+      <h3>Spec</h3>
+      <pre id="specBox">–</pre>
+    </section>
 
-function renderSpec(spec) {
-  outSpec.textContent = JSON.stringify(spec, null, 2);
-}
+    <section class="card">
+      <h3>Preview (mocked)</h3>
+      <pre id="previewBox">–</pre>
+    </section>
+  </main>
 
-function renderPreview(spec, sampleData) {
-  const firstEntity = spec.entities[0]?.name;
-  const rows = (sampleData[firstEntity] || []).slice(0, 5);
-  outPreview.innerHTML = `
-    <div class="card">
-      <h3>${firstEntity || "Data"}</h3>
-      <table>
-        <thead>${rows[0] ? Object.keys(rows[0]).map(k => `<th>${k}</th>`).join("") : ""}</thead>
-        <tbody>
-          ${rows.map(r => `<tr>${Object.values(r).map(v => `<td>${v}</td>`).join("")}</tr>`).join("")}
-        </tbody>
-      </table>
-    </div>`;
-}
-
-async function doSpec(fromPreset) {
-  const { spec } = await callApi(fromPreset ? { preset: fromPreset } : { text: txt.value });
-  renderSpec(spec);
-  window.__lastSpec = spec;
-}
-
-async function doPreview(fromPreset) {
-  const payload = fromPreset ? { preset: fromPreset } : { text: txt.value };
-  const { spec, sampleData } = await callApi(payload);
-  renderSpec(spec);
-  renderPreview(spec, sampleData);
-  window.__lastSpec = spec;
-}
-
-btnSpec?.addEventListener("click", () => doSpec());
-btnPreview?.addEventListener("click", () => doPreview());
-
-btnInvoice?.addEventListener("click", () => doPreview("invoice"));
-btnTodo?.addEventListener("click", () => doPreview("todo"));
-btnCrm?.addEventListener("click", () => doPreview("crm"));
-
-btnMic?.addEventListener("click", async () => {
-  // Fallback אם אין STT
-  alert("STT לא מחובר בדמו הזה. עוברים לקלט ידני 🙂");
-  txt.focus();
-});
-
-btnDownload?.addEventListener("click", () => {
-  const data = window.__lastSpec || {};
-  const blob = new Blob([JSON.stringify(data, null, 2)], { type: "application/json" });
-  const a = document.createElement("a");
-  a.href = URL.createObjectURL(blob);
-  a.download = "spec.json";
-  a.click();
-  URL.revokeObjectURL(a.href);
-});
-</script>
+  <script src="./app.js"></script>
+</body>
+</html>
